# guitarpro

./: .gitignore  .pre-commit-config.yaml  .woodpecker.yml  CLAUDE.md  Cargo.toml  DOCUMENTATION.md  FILE-STRUCTURE-BODY.md  FILE-STRUCTURE-CHORD-DIAGRAMS.md  FILE-STRUCTURE.md  Ideas.md  LICENSE  README.md  flake.nix  justfile  shell.nix  todo.md
.github/workflows/: rust-clippy.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
lib/: Cargo.toml  FILE-STRUCTURE-BODY.md  FILE-STRUCTURE-NOTE.md  README.md  audit_report.txt
lib/src/: beat.rs  effects.rs  enums.rs  error.rs  headers.rs  io.rs  key_signature.rs  lib.rs  measure.rs  midi.rs  mix_table.rs  note.rs  test_audit.rs  tests.rs
lib/src/audio/: midi.rs  mod.rs
lib/src/io/: gpif.rs  gpif_import.rs  gpx.rs  mod.rs  primitive.rs
lib/src/model/: beat.rs  chord.rs  effects.rs  enums.rs  headers.rs  key_signature.rs  lyric.rs  measure.rs  mix_table.rs  mod.rs  note.rs  page.rs  rse.rs  song.rs  track.rs
src/: Cargo.toml  beat.rs  chord.rs  effects.rs  enums.rs  headers.rs  io.rs  key_signature.rs  lib.rs  lyric.rs  main.rs  measure.rs  midi.rs  mix_table.rs  note.rs  page.rs  rse.rs  song.rs  track.rs  util.rs
src/base/: channel.rs  song.rs
src/io/: guitarpro.rs  tuxguitar.rs
test/: gamma_ray-heading_for_tomorrow.gp3  iron-maiden-doctor_doctor.gp5  led-zeppelin-babe_i_m_gonna_leave_you.gp4  rage-against-the-machine_bombtrack-official-2210247.gpx  test.gp  test.gp5  the-beatles-let_it_be.gp3
web_server/: Cargo.toml  README.md
