[package]
name = "guitarpro"
version = "0.1.0"
authors = ["slundi"]
edition = "2018"
description = "Rust library and command line interface (CLI) for guitar tab files."
repository = "https://gitlab.com/slundi/guitar-io"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
clap = { version = "3", features = ["derive"] }
log = "0.4"
fraction = "*"
