[package]
name = "lib"
version = "0.2.2"
authors = ["slundi"]
edition = "2021"
description = "Rust library and command line interface (CLI) for guitar tab files."
repository = "https://gitlab.com/slundi/guitar-io"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "guitarpro"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"], optional = true } 
fraction = "0.13"
encoding_rs = "0.8"

[features]
build-binary = ["clap"]

[dev-dependencies]
