[package]
name = "web_server"
version = "0.2.2"
authors = ["slundi"]
edition = "2021"
description = "Web server to perform queries and operations to music files"
repository = "https://gitlab.com/slundi/guitar-io"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "score_server"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
